--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://https://loordbz.github.io/website/",
+  "homepage": "https://loordbz.github.io/website/",
   "name": "website",
   "private": true,
   "version": "0.0.0",
